// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkDialog should render correctly in the given target if renderTarget is supplied 1`] = `null`;

exports[`BpkDialog should render correctly in the given target if renderTarget is supplied 2`] = `
<div>
  <div>
    <div
      data-reactroot=""
    >
      <div
        class="bpk-scrim"
      />
      <div
        class="bpk-scrim-content bpk-modal__container"
      >
        <section
          aria-labelledby="bpk-modal-heading-my-modal"
          class="bpk-modal"
          id="my-modal"
          role="dialog"
          tabindex="-1"
        >
          <div
            class="bpk-modal__content"
          >
            <button
              aria-label="Close"
              class="bpk-close-button bpk-dialog__close-button"
              title="Close"
              type="button"
            >
              <svg
                class="bpk-close-button__icon"
                height="18"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14.8 12l4.9-4.9c.4-.4.4-1 0-1.4l-1.4-1.4c-.4-.4-1-.4-1.4 0L12 9.2l-4.9-5c-.4-.4-1-.4-1.4 0L4.2 5.6c-.4.4-.4 1 0 1.4l5 5-4.9 4.9c-.4.4-.4 1 0 1.4l1.4 1.4c.4.4 1 .4 1.4 0l4.9-4.9 4.9 4.9c.4.4 1 .4 1.4 0l1.4-1.4c.4-.4.4-1 0-1.4L14.8 12z"
                />
              </svg>
            </button>
            <!-- react-text: 9 -->
            Dialog content inside a custom target
            <!-- /react-text -->
          </div>
        </section>
      </div>
    </div>
  </div>
</div>
`;

exports[`BpkDialog should render correctly when it is not dismissible 1`] = `null`;

exports[`BpkDialog should render correctly when it is not dismissible 2`] = `
<div>
  <div>
    <div
      data-reactroot=""
    >
      <div
        class="bpk-scrim"
      />
      <div
        class="bpk-scrim-content bpk-modal__container"
      >
        <section
          aria-labelledby="bpk-modal-heading-my-modal"
          class="bpk-modal"
          id="my-modal"
          role="dialog"
          tabindex="-1"
        >
          <div
            class="bpk-modal__content"
          >
            <!-- react-text: 6 -->
            Dialog content inside a custom target
            <!-- /react-text -->
          </div>
        </section>
      </div>
    </div>
  </div>
</div>
`;
